force-app/main/default/objects/Credit_Commitment__c/Credit_Commitment__c.object-meta.xml
<CustomObject>
    <label>Credit Commitment</label>
    <nameField>
        <displayFormat>CC- {00000000}</displayFormat>
        <label>Credit Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>