force-app/main/default/objects/Credit_Commitment__c/fields/Amount_outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_outstanding__c</fullName>
    <label>Current Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>