force-app/main/default/objects/Credit_Commitment__c/fields/Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit__c</fullName>
    <inlineHelpText>Credit limit (for credit cards only)</inlineHelpText>
    <label>Credit limit (for credit cards only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>