force-app/main/default/objects/Credit_Commitment__c/fields/Credit_type__c.field-meta.xml
<CustomField>
    <fullName>Credit_type__c</fullName>
    <label>Type of finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Unsecured Loan</fullName>
            </value>
            <value>
                <fullName>Basic Bank Account</fullName>
            </value>
            <value>
                <fullName>Bridging Finance</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Buy To Let Mortgage</fullName>
            </value>
            <value>
                <fullName>Charge Card</fullName>
            </value>
            <value>
                <fullName>Communications Supplier</fullName>
            </value>
            <value>
                <fullName>Consolidated Debt</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Fixed Term</fullName>
            </value>
            <value>
                <fullName>Fixed Term Deferred</fullName>
            </value>
            <value>
                <fullName>Green Deals</fullName>
            </value>
            <value>
                <fullName>Hire purchase</fullName>
            </value>
            <value>
                <fullName>Home Lending</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Motor</fullName>
            </value>
            <value>
                <fullName>Local Authority Rental</fullName>
            </value>
            <value>
                <fullName>Mail Order</fullName>
            </value>
            <value>
                <fullName>Option Account</fullName>
            </value>
            <value>
                <fullName>Payday Loans</fullName>
            </value>
            <value>
                <fullName>Property Rental</fullName>
            </value>
            <value>
                <fullName>Public Utility</fullName>
            </value>
            <value>
                <fullName>Finance Lease Rental</fullName>
            </value>
            <value>
                <fullName>Operating Lease</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Flexible Mortgage</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Secured loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>