force-app/main/default/objects/Credit_Commitment__c/fields/Creditor_name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_name__c</fullName>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>