force-app/main/default/objects/Credit_Commitment__c/fields/Finance_provider__c.field-meta.xml
<CustomField>
    <fullName>Finance_provider__c</fullName>
    <inlineHelpText>Finance provider (Name of finance company):</inlineHelpText>
    <label>Finance provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>