force-app/main/default/objects/Credit_Commitment__c/fields/How_much_is_left_to_pay__c.field-meta.xml
<CustomField>
    <fullName>How_much_is_left_to_pay__c</fullName>
    <inlineHelpText>How much is left to pay at completion?</inlineHelpText>
    <label>How much is left to pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>