force-app/main/default/objects/Credit_Commitment__c/fields/How_much_is_left_to_pay_after_completion__c.field-meta.xml
<CustomField>
    <fullName>How_much_is_left_to_pay_after_completion__c</fullName>
    <label>Amount Left After Mortgage Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>