force-app/main/default/objects/Credit_Commitment__c/fields/Monthly_repayment_after_completion__c.field-meta.xml
<CustomField>
    <fullName>Monthly_repayment_after_completion__c</fullName>
    <label>Monthly payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>