force-app/main/default/objects/Credit_Commitment__c/fields/Monthly_repayment_amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_repayment_amount__c</fullName>
    <label>Current Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>