force-app/main/default/objects/Credit_Commitment__c/fields/Number_of_payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_payments__c</fullName>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>