force-app/main/default/objects/Credit_Commitment__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <label>Payment Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>