force-app/main/default/objects/Credit_Commitment__c/fields/Repay_before_mortgage_completes__c.field-meta.xml
<CustomField>
    <fullName>Repay_before_mortgage_completes__c</fullName>
    <label>Repay before mortgage completes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>