force-app/main/default/objects/Credit_Commitment__c/fields/Source_of_repayment__c.field-meta.xml
<CustomField>
    <fullName>Source_of_repayment__c</fullName>
    <label>Source Of Repayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Sale of property</fullName>
            </value>
            <value>
                <fullName>This mortgage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>