force-app/main/default/objects/Credit_Commitment__c/fields/Start_with_the_current_year__c.field-meta.xml
<CustomField>
    <fullName>Start_with_the_current_year__c</fullName>
    <label>Start with the current year</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>